// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlled - 3rd state 1`] = `
<div
  className="pf-c-check pf-m-standalone"
>
  <input
    aria-invalid={false}
    aria-label="check"
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-2"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`controlled 1`] = `
<div
  className="pf-c-check pf-m-standalone"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-1"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`isDisabled 1`] = `
<div
  className="pf-c-check pf-m-standalone"
>
  <input
    aria-invalid={false}
    aria-label="check"
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-4"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={true}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`label is function 1`] = `
<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-6"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    <h1>
      Header
    </h1>
  </label>
</div>
`;

exports[`label is node 1`] = `
<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-7"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    <h1>
      Header
    </h1>
  </label>
</div>
`;

exports[`label is string 1`] = `
<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-5"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    Label
  </label>
</div>
`;

exports[`passing HTML attribute 1`] = `
<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    aria-labelledby="labelId"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-9"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    label
  </label>
</div>
`;

exports[`passing class 1`] = `
<div
  className="pf-c-check class-123"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-8"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    label
  </label>
</div>
`;

exports[`uncontrolled 1`] = `
<div
  className="pf-c-check pf-m-standalone"
>
  <input
    aria-invalid={false}
    aria-label="check"
    className="pf-c-check__input"
    data-ouia-component-id="OUIA-Generated-Checkbox-3"
    data-ouia-component-type="PF4/Checkbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;
